{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 373,
  "lineage": "11313d88-7abf-3b02-5bc0-d7b9d44942c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0676d3d3b3503ee77",
            "arn": "arn:aws:ec2:ca-central-1:381492259650:elastic-ip/eipalloc-0676d3d3b3503ee77",
            "association_id": "eipassoc-0c23c8167143f7eec",
            "domain": "vpc",
            "id": "eipalloc-0676d3d3b3503ee77",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0931b383350888576",
            "private_dns": "ip-10-0-0-45.ca-central-1.compute.internal",
            "private_ip": "10.0.0.45",
            "public_dns": "ec2-35-183-189-105.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.183.189.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "busyQA"
            },
            "tags_all": {
              "Name": "busyQA"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:internet-gateway/igw-045207b651e2ace6c",
            "id": "igw-045207b651e2ace6c",
            "owner_id": "381492259650",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0676d3d3b3503ee77",
            "association_id": "eipassoc-0c23c8167143f7eec",
            "connectivity_type": "public",
            "id": "nat-0c78fd9af845f72b1",
            "network_interface_id": "eni-0931b383350888576",
            "private_ip": "10.0.0.45",
            "public_ip": "35.183.189.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-090f2bce46c5339d7",
            "tags": {
              "Name": "NAT_gw"
            },
            "tags_all": {
              "Name": "NAT_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:route-table/rtb-085eee7ceb6c16d9e",
            "id": "rtb-085eee7ceb6c16d9e",
            "owner_id": "381492259650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c78fd9af845f72b1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:route-table/rtb-0519a94a7eacd0484",
            "id": "rtb-0519a94a7eacd0484",
            "owner_id": "381492259650",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045207b651e2ace6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbb462ed7622b6e",
            "route_table_id": "rtb-085eee7ceb6c16d9e",
            "subnet_id": "subnet-03f024e0a49aef864"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cce4b48cb603aec",
            "route_table_id": "rtb-085eee7ceb6c16d9e",
            "subnet_id": "subnet-017924ecfa8dad699"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc0075847fc049f5",
            "route_table_id": "rtb-0519a94a7eacd0484",
            "subnet_id": "subnet-090f2bce46c5339d7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d0c3f0200f8fc7",
            "route_table_id": "rtb-0519a94a7eacd0484",
            "subnet_id": "subnet-076a087f0f8e1bbd0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:security-group/sg-0da255521bc0c81dc",
            "description": "allow_HTTP",
            "egress": [],
            "id": "sg-0da255521bc0c81dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_HTTP",
            "name_prefix": "",
            "owner_id": "381492259650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_HTTP"
            },
            "tags_all": {
              "Name": "allow_HTTP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:security-group/sg-0b373a5ed5d5b8634",
            "description": "allow_SSH",
            "egress": [],
            "id": "sg-0b373a5ed5d5b8634",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "381492259650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_SSH"
            },
            "tags_all": {
              "Name": "allow_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:security-group/sg-02a14db628530ac1d",
            "description": "allow_db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a14db628530ac1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_db",
            "name_prefix": "",
            "owner_id": "381492259650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_db"
            },
            "tags_all": {
              "Name": "allow_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:security-group/sg-0770bf1fc5d2fa3f5",
            "description": "allow_postgres",
            "egress": [],
            "id": "sg-0770bf1fc5d2fa3f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow_postgres",
            "name_prefix": "",
            "owner_id": "381492259650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_postgres"
            },
            "tags_all": {
              "Name": "allow_postgres"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:security-group/sg-021f8db8bede620eb",
            "description": "allow_redis",
            "egress": [],
            "id": "sg-021f8db8bede620eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "allow_redis",
            "name_prefix": "",
            "owner_id": "381492259650",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_redis"
            },
            "tags_all": {
              "Name": "allow_redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:subnet/subnet-03f024e0a49aef864",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f024e0a49aef864",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492259650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:subnet/subnet-017924ecfa8dad699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017924ecfa8dad699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492259650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:subnet/subnet-090f2bce46c5339d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f2bce46c5339d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492259650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:subnet/subnet-076a087f0f8e1bbd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076a087f0f8e1bbd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492259650",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0600e06e10c7c3f02"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:381492259650:vpc/vpc-0600e06e10c7c3f02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b9d6e8b2bba64b7",
            "default_route_table_id": "rtb-035a98e50c48db6d3",
            "default_security_group_id": "sg-0db77087ed14b0b59",
            "dhcp_options_id": "dopt-00a2d474064a04482",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0600e06e10c7c3f02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035a98e50c48db6d3",
            "owner_id": "381492259650",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}